<resources>
    <string name="app_name">RoommateShoppingList</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="edit_item">Edit Item</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="milk">Milk</string>
    <string name="quantity">Qt: </string>
    <string name="price">Price: </string>
    <string name="item_name">Item Name</string>
    <string name="item_quantity">Quantity</string>
    <string name="item_price">Price</string>
    <string name="add_item">Add Item</string>
    <string name="remove_item">Remove</string>
    <string name="save_item">Save</string>
    <string name="total_price">Total Price</string>
    <string name="purchase">Purchase</string>
    <string name="cart_list">Cart List</string>

    <string name="delete">Delete</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>